--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-camera-roll-picker": "^1.2.3",
+    "react-native-date-picker-x": "^1.3.0",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.5.0",
