--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
+    "dateformat": "^3.0.3",
     "expo": "^27.0.1",
     "native-base": "^2.7.2",
     "react": "16.3.1",
