--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-date-picker-x": "^1.3.0",
     "react-native-gifted-chat": "^0.4.3",
+    "react-native-loader": "^1.2.1",
     "react-native-maps": "^0.21.0",
     "react-native-modal": "^6.5.0",
     "react-native-nav": "^2.0.2",
